Updating journey/complete/elements-access.html via Laneworks CMS Publish

--- a/journey/complete/elements-access.html
+++ b/journey/complete/elements-access.html
@@ -17,6 +17,10 @@ title: 'Access'
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
+<p><strong>Links</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="https://www.loggly.com/plans-and-pricing/">Loggly</a> - Loggly does not offer API access until you get to their standard level package, showing how access can be leverage as an element for API plans.</li>
+<li><a href="http://weather2020.com/api/">Weather2020</a> - Weather2020 offers first access to new services as part of their enterprise plan.</li>
 </ul>
 </ul>
 </ul>
