Updating journey/complete/elements-on-demand.html via Laneworks CMS Publish

--- a/journey/complete/elements-on-demand.html
+++ b/journey/complete/elements-on-demand.html
@@ -17,6 +17,9 @@ title: 'On-Demand'
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
+<p><strong>Links</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="https://aws.amazon.com/ec2/pricing/">Amazon EC2</a> - Amazon EC2 is one of the best examples of a resource that is available via an API on demand. There are other ways to think about this concept, but APIs applied to compute.</li>
 </ul>
 </ul>
 </ul>
