Updating journey/complete/elements-reserved.html via Laneworks CMS Publish

--- a/journey/complete/elements-reserved.html
+++ b/journey/complete/elements-reserved.html
@@ -17,6 +17,9 @@ title: 'Reserved'
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
+<p><strong>Links</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="https://aws.amazon.com/ec2/purchasing-options/reserved-instances/">Amazon EC2</a> - Amazon EC2 is also another great example of reserved API driven resources.</li>
 </ul>
 </ul>
 </ul>
