Updating journey/complete/elements-volume.html via Laneworks CMS Publish

--- a/journey/complete/elements-volume.html
+++ b/journey/complete/elements-volume.html
@@ -17,6 +17,11 @@ title: 'Volume'
 <div style="padding: 5px 25px 5px 25px;">
 </ul>
 </ul>
+<p><strong>Links</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="https://console.ng.bluemix.net/catalog/services/alchemyapi">AlchemyAPI</a> - AlchemyAPI provides a pretty classic volume based free and standard tiers for API access.</li>
+<li><a href="https://clearbit.com/pricing">Clearbit</a> - Clearbit has a really slick volume API call slider that you can adjust to see how it affects the different pricing levels. These types of volume based elements can prove very helpful to consumers.</li>
+<li><a href="https://www.twilio.com/sms/pricing">Twilio</a> - Twilio has a pretty comprehensive volume pricing list for SMS API resources.</li>
 </ul>
 </ul>
 </ul>
