Updating journey/complete/elements-educational.html via Laneworks CMS Publish

--- a/journey/complete/elements-educational.html
+++ b/journey/complete/elements-educational.html
@@ -15,6 +15,12 @@ title: 'Educational'
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Educational"}</p>
 <p>A platform provides considerations for K-12 or higher educational access to resources. Like non-profit levels of access, education can benefit the overall platform reach, and benefit other marketing efforts. Reaching educational users, can lead to future individual, business, or institutional users, and improve the overall platform image.</p>
 <div style="padding: 5px 25px 5px 25px;">
+<p><strong>Organizations</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="http://developer.pearson.com/api/peachpit-visual-quickstart-guides-api/apimethod/get-article-0/190/overview">Pearson</a> - Pearson has turned off regular commercial access to an API, but allows educational access to the articles now.</li>
+<li><a href="http://products.wolframalpha.com/developers/">Wolfram|Alpha</a> - Wolfram Alpha allows different levels of access for primary and secondary school levels.</li>
+<li><a href="">RepreZen API Studio</a> - The API design, deployment and management service provider Reprezen has educational pricing available for their platform.</li>
+<li><a href="http://aws.amazon.com/elastictranscoder/">Amazon Web Services</a> - Amazon has a pretty robust educational program around their platform and APIs, offering a variety of resources.</li>
 </ul>
 </ul>
 </ul>
