--- a/journey/complete/elements-reseller.html
+++ b/journey/complete/elements-reseller.html
@@ -15,6 +15,11 @@ title: 'Reseller'
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Reseller"}</p>
 <p>There are reseller opportunities in place around resources available via the platform, that allow approved API consumers to access resources, as well as resell access to resources. Resellers are paid a fixed amount, or possibly percentages of sales of products and services, which could include accessing and usage of API resources.</p>
 <div style="padding: 5px 25px 5px 25px;">
+<p><strong>Organizations</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="">GoDaddy</a> - GoDaddy has a good example of APIs working with a reseller program to allow 3rd parties to earn revenue by putting APIs to work.</li>
+<li><a href="/css/pwmaster43.css?v=59">Google</a> - Google has an interesting reseller API around Google Apps.</li>
+<li><a href="http://docs.sendgrid.com/documentation/api/reseller-api/">SendGrid</a> - SendGrid has a reseller API for use as part of deeper integrations by their resellers.</li>
 </ul>
 </ul>
 </ul>
