Updating journey/complete/elements-products.html via Laneworks CMS Publish

--- a/journey/complete/elements-products.html
+++ b/journey/complete/elements-products.html
@@ -15,6 +15,9 @@ title: 'Products'
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Products"}</p>
 <p>An API primarily exists to support the existence, or drive the sales of another product, or product line. I separate out devices from this grouping, because they require separate attention. This could describe entire supply chain integration using APIs, all the way to affiliate or reseller style systems like used by Amazon. There are a number of ways products can be sold, by putting APIs to work.</p>
 <div style="padding: 5px 25px 5px 25px;">
+<p><strong>Organizations</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="http://octopart.com/api/overview">Octopart</a> - Octopart is a great example of how an API can be used to support the sales of a product catalog.</li>
 </ul>
 </ul>
 </ul>
