Updating journey/complete/elements-customization.html via Laneworks CMS Publish

--- a/journey/complete/elements-customization.html
+++ b/journey/complete/elements-customization.html
@@ -15,6 +15,9 @@ title: 'Customization'
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Customization"}</p>
 <p>There are customization opportunities around API plans, pricing, and rate limits, giving more control to consumers to customize their experience. For many plans, things may be fixed, but as you go further up the chain, into enterprise and partner level tiers, there may be opportunities for customization of plan elements, where other users do not have the opportunity.</p>
 <div style="padding: 5px 25px 5px 25px;">
+<p><strong>Organizations</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="http://vimeo.com/api">Vimeo</a> - Vimeo offers customization options as part of plus and pro plans.</li>
 </ul>
 </ul>
 </ul>
