--- a/journey/complete/elements-overview.html
+++ b/journey/complete/elements-overview.html
@@ -15,6 +15,11 @@ title: 'Overview'
 <p style="font-size: 22px; font-weight: bold;" align="center">{"Elements":"Overview"}</p>
 <p>Providing a single landing page, available at a simple URL, with all the information about plans available as part of platform operations. There may be more than one plan overview page available, for example one for SaaS side of offering, one for developers, and another possibly for enterprise or partner consumers.</p>
 <div style="padding: 5px 25px 5px 25px;">
+<p><strong>Organizations</strong></p>
+<ul style="padding: 1px 0px 1px 25px;">
+<li><a href="http://aws.amazon.com/elastictranscoder/">Amazon Web Services</a> - Amazon is one of the leading examples when it comes to establishing different plans for API access, with many nuances, and details.</li>
+<li><a href="">Algolia</a> - I feel that Algolias pricing page provides a sophisticated glimpse into how API access can be planned out with many dimensions.</li>
+<li><a href="http://www.twilio.com/api/telegram">Twilio</a> - Another API pioneer that provides a very robust look at how API plans can be assembled.</li>
 </ul>
 </ul>
 </ul>
